--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "gazillionth-queue",
-  "version": "1.0.0",
+  "name": "@sovpro/gazillionth-queue",
+  "version": "1.1.0",
   "description": "One in gazillions of queue implementations",
   "main": "gazillionth-queue.js",
   "scripts": {
-    "test": "istanbul cover test.js"
+    "test": "istanbul cover test"
   },
   "repository": {
     "type": "git",
