--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@sovpro/gazillionth-queue",
-  "version": "1.1.3",
-  "description": "One in gazillions of queue implementations",
+  "version": "1.1.4",
+  "description": "One in gazillions of task queue implementations",
   "main": "gazillionth-queue.js",
   "scripts": {
     "test": "istanbul cover test"
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/sovpro/gazillionth-queue.git"
   },
-  "keywords": ["queue", "async", "concurrency"],
+  "keywords": ["task", "queue", "async", "concurrency"],
   "author": "sovpro <its.so@outlook.com>",
   "license": "MIT",
   "devDependencies": {
