--- a/package.json
+++ b/package.json
@@ -1,19 +1,34 @@
 {
   "name": "@sovpro/gazillionth-queue",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "One in gazillions of task queue implementations",
-  "main": "gazillionth-queue.js",
+  "main": "dist/gazillionth-queue",
   "scripts": {
-    "test": "istanbul cover test"
+    "test": "istanbul cover test",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sovpro/gazillionth-queue.git"
   },
-  "keywords": ["task", "queue", "async", "concurrency"],
+  "keywords": [
+    "task",
+    "queue",
+    "async",
+    "concurrency"
+  ],
   "author": "sovpro <its.so@outlook.com>",
   "license": "MIT",
   "devDependencies": {
-    "istanbul": "^0.4.5"
-  }
+    "@types/node": "^13.11.1",
+    "istanbul": "^0.4.5",
+    "typescript": "^3.8.3"
+  },
+  "engines": {
+    "node": ">=6"
+  },
+  "types": "dist/gazillionth-queue.d.ts",
+  "files": [
+    "dist/"
+  ]
 }
